--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   get_it: ^9.0.5
   dotted_border: ^3.1.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
