--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^9.0.5
   dotted_border: ^3.1.0
   image_picker: ^1.2.1
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
