--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   image_picker: ^1.2.1
   uuid: ^4.5.2
   intl: ^0.20.2
+  internet_connection_checker_plus: ^2.9.1
+  hive_flutter: ^1.1.0
+  
 
 dev_dependencies:
   flutter_test:
